[package]
name = "counter-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.9.3"
solana-program = "=2.1.9"

[dev-dependencies]
base64 = "0.22.1"
solana-program-test = "=2.1.9"
solana-sdk = "=2.1.9"
